--- a/02 - Starter Files and Tooling Setup/test-START.html
+++ b/02 - Starter Files and Tooling Setup/test-START.html
@@ -8,16 +8,25 @@
   <title>Starter Files and Tooling Setup!</title>
 </head>
 
+
+
 <style>
-  p {
+
+p{
+  font-size: 50px;
+  border-bottom: 10px solid var(--yellow);
+  color:var(--black);
+  }
+
+  /* p {
     font-size: 50px;
     border-bottom: 10px solid var(--yellow);
     color: var(--black);
-  }
+  } */
 </style>
 
 <body>
-  <p>Hello!</p>
+  <p>Hello!!!!</p>
 </body>
 
 </html>
