--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
@@ -10,6 +10,34 @@
 
 <body>
 
+  <!-- div.item{$}*10 -->
+
+
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+    <div class="item">10</div>
+  </div>
+
+
+  <style>
+    .container {
+      display: grid;
+      grid-template-columns: 200px 500px;
+      grid-template-rows: 200px 100px 400px;
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+    }
+  </style>
+
+
 </body>
 
 </html>
